[gd_scene load_steps=13 format=3 uid="uid://buda3onciq0ft"]

[ext_resource type="ArrayMesh" uid="uid://cdlfamxjp1kf2" path="res://Models/enemy_ufoRed.obj" id="1_1w5p4"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_544vs"]
[ext_resource type="PackedScene" uid="uid://d1cenqdiajigi" path="res://Scenes/health_bar_3d.tscn" id="3_p1s11"]
[ext_resource type="AudioStream" uid="uid://ey5qqose57ij" path="res://Sounds/death.wav" id="4_ctv0q"]
[ext_resource type="PackedScene" uid="uid://d15civcg127cm" path="res://Scenes/PolyphonicAudioPlayer.tscn" id="4_nsbi6"]
[ext_resource type="Script" path="res://Scripts/Classes/AudioLibrary.gd" id="5_tmke3"]
[ext_resource type="Script" path="res://Scripts/Classes/SoundEffect.gd" id="6_hcmij"]
[ext_resource type="AudioStream" uid="uid://ftmv41uyfx18" path="res://Sounds/burned.wav" id="8_268m3"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_278tn"]
height = 0.788853

[sub_resource type="Resource" id="Resource_svpuu"]
script = ExtResource("6_hcmij")
tag = "death"
stream = ExtResource("4_ctv0q")

[sub_resource type="Resource" id="Resource_ym4r7"]
script = ExtResource("6_hcmij")
tag = "burn"
stream = ExtResource("8_268m3")

[sub_resource type="Resource" id="Resource_xxix8"]
script = ExtResource("5_tmke3")
sound_effects = Array[ExtResource("6_hcmij")]([SubResource("Resource_svpuu"), SubResource("Resource_ym4r7")])

[node name="UFO" type="PathFollow3D"]

[node name="Enemy" type="CharacterBody3D" parent="." groups=["Enemy"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_544vs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemy"]
mesh = ExtResource("1_1w5p4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.218956, 0)
shape = SubResource("CylinderShape3D_278tn")

[node name="HealthBar3D" parent="Enemy" instance=ExtResource("3_p1s11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.720119, 0)

[node name="BurnTimer" type="Timer" parent="Enemy"]

[node name="SlowTimer" type="Timer" parent="Enemy"]

[node name="PolyphonicAudioPlayer" parent="." instance=ExtResource("4_nsbi6")]
audio_library = SubResource("Resource_xxix8")

[connection signal="timeout" from="Enemy/BurnTimer" to="Enemy" method="_on_burn_timer_timeout"]
[connection signal="timeout" from="Enemy/SlowTimer" to="Enemy" method="_on_slow_timer_timeout"]
